--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,7 @@ margin: auto;
 display: flex;
 justify-content: center;
 align-items: center;
+background: white;
 }
 
 main {
@@ -16,11 +17,15 @@ main {
   height: 500px;
   display: flex;
   flex-wrap: wrap;
+  /* border: 1px dotted black; */
   /* margin: auto; */
+  background-image: url('../assets/background.png');
+  background-size: cover;
+  background-repeat: no-repeat ;
 }
 
 div {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   width: 50px;
   height: 50px;
 }
@@ -32,7 +37,11 @@ div {
 
 
 .frog {
-  background-color: green;
+  background-image: url('../assets/frog.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  transform: scaleX(0.75);
 }
 
 .car {
@@ -43,8 +52,14 @@ div {
 }
 
 .log {
-  background-color: brown;
+  background-image: url('../assets/log.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .log-and-frog {
-  background-color: pink;
+  background-image: url('../assets/frog.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
